public/css/style.css
/* main pages */

* {
  box-sizing: border-box;
  margin: 0;
  font-family: 'Poppins';
}

/* Style for header */
header {
  background-color: #113f67;
  padding: 30px;
  display: flex;
  justify-content: space-between;
  align-items: end;
  border-radius: 10px;
}



.header-link {
  text-decoration: none;
  color: #ffc93c;
  font-size: 40pt;
  font-family: "Caveat";
}

/* Style for navigation bar */
nav {
  display: flex;
}

.nav-link {
  padding: 0;
  margin: 10px;
  display: flex;
  flex-direction: row;
  text-decoration: none;
}

a.nav-link {
  font-family: 'Poppins';
}

/* Style for logout button */
#logout {
  padding: 10px 25px;
  text-align: center;
  background-color: #ffc93c;
  color: #113f67;
  border: none;
  border-radius: 5px;
  cursor: pointer;
  font-size: 16pt;
  transition: all 0.3s ease;
}

button{
  
  padding: 5px 14px;
  border-radius: 5px;
}

#logout:hover {
  background-color: #ffa500;
  color: #fff;
}

/* Style for main content */
.container {
  margin: 20px;
  background-color: #f0f0f0;
  padding: 20px;
  border-radius: 10px;
}

p.post-content {
  font-size: x-large;
  padding-top: 20px;
}

.post {
  padding-top: 74px;
}



/* Style for footer */
footer {
  background-color: #113f67;
  padding: 20px;
  text-align: center;
  color: #ffc93c;
  border-radius: 10px;
}

/* Responsive Styles */

@media screen and (max-width: 900px) {
  header {
    justify-content: center;
    text-align: left;
  }

  header nav {
    flex-wrap: wrap;
    justify-content: right;
  }
}

@media screen and (max-width: 412px) {
  header {
    justify-content: center;
    text-align: center;
    padding: 32px;
    flex-direction: column;
  }

  .header-link {
    font-size: 28pt;
  }

  header nav {
    flex-wrap: wrap;
    justify-content: center;
    padding-top: 20px;
  }

  .post {
    font-size: 14pt;
  }

  .post-link {
    font-size: 20pt;
  }
  
  .post-author {
    font-size: 14pt;
  }
  
  .post-content {
    font-size: 12pt;
  }
}

@media screen and (max-width: 280px) {
  header {
    justify-content: center;
    text-align: center;
    padding: 32px;
    flex-direction: column;
  }

  .header-link {
    font-size: 24pt;
  }

  header nav {
    flex-wrap: wrap;
    justify-content: center;
  }

  .nav-link {
    margin: 1px 0 1px 1px;
  }

  .post {
    font-size: 10pt;
  }

  .post-link {
    font-size: 16pt;
  }
  
  .post-author {
    font-size: 12pt;
  }
  
  .post-content {
    font-size: 12pt;
  }

  .allposts-title {
    font-size: 20pt;
  }

  .allposts-author {
    font-size: 16pt;
  }

  .userpost-title {
    font-size: 18pt;
  }

  .userpost-content {
    font-size: 12pt;
  }
}

